<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.example.karan.sunshine">

    <com.example.karan.sunshine.LocationEditTextPreference
        android:defaultValue="94043"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_title"
        custom:minLength="3" />

    <Preference
        android:key="viewOnMap"
        android:summary="Tap this to view your selected location on a map"
        android:title="View Location on Map" />

    <ListPreference
        android:defaultValue="@string/pref_units_metric_key"
        android:enabled="true"
        android:entries="@array/units_entries"
        android:entryValues="@array/units_values"
        android:key="@string/pref_units_key"
        android:summary="@string/pref_units_summary"
        android:title="@string/pref_units_title" />

    <CheckBoxPreference
        android:defaultValue="@string/pref_notification_default_value"
        android:key="@string/pref_notification_key"
        android:summaryOff="@string/pref_notification_disabled"
        android:summaryOn="@string/pref_notification_enabled"
        android:title="@string/pref_notification_title" />

    <ListPreference
        android:defaultValue="@string/icon_pack_colored_key"
        android:enabled="true"
        android:entries="@array/icon_pack_entries"
        android:entryValues="@array/icon_pack_values"
        android:key="@string/pref_icon_pack_key"
        android:summary="Select preferred icon pack here"
        android:title="Icon Pack" />

</PreferenceScreen>
