<!-- Master layout. -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <include
                layout="@layout/detail_today_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp" />

        </FrameLayout>

        <android.support.v7.widget.GridLayout
            android:id="@+id/detail_additional_pane"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/detail_accent_pane_background"
            android:paddingEnd="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            app:columnCount="2">

            <android.support.v4.widget.Space
                app:layout_columnSpan="2"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/detail_humidity_label_textView"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:text="@string/humidity_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />

            <TextView
                android:id="@+id/detail_humidity_textView"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                tools:text="38%" />

            <TextView
                android:id="@+id/detail_pressure_label_textView"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:paddingTop="@dimen/detail_view_extra_padding"
                android:text="@string/pressure_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />


            <TextView
                android:id="@+id/detail_pressure_textView"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                tools:text="995 hPa" />

            <TextView
                android:id="@+id/detail_wind_label_textView"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:paddingTop="@dimen/detail_view_extra_padding"
                android:text="@string/wind_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/detail_accent_label"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal" />

            <TextView
                android:id="@+id/detail_wind_textView"
                android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/white"
                app:layout_columnWeight="1"
                app:layout_gravity="fill_horizontal"
                tools:text="4km/h NW" />

            <android.support.v4.widget.Space
                app:layout_columnSpan="2"
                app:layout_rowWeight="1" />

        </android.support.v7.widget.GridLayout>
    </LinearLayout>
</FrameLayout>